# Eidos

./: .gitignore  Eidos.pyproj  Eidos.sln  README.md
backend/: .dockerignore  .env.example  Dockerfile  _rewrite_health.py  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/analysis/: __init__.py  base_parser.py  blame.py  c_parser.py  clone_detection.py  code_health.py  complexity.py  coupling.py  cpp_parser.py  csharp_parser.py  csharp_parser_adapter.py  dead_code.py  dependency_parser.py  entry_points.py  go_parser.py  graph_builder.py  java_parser.py  metrics.py  models.py  pipeline.py  (+4 more)
backend/eidos.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_analysis_api.py  test_answer_builder.py  test_answer_evaluator.py  test_api.py  test_api_gaps.py  test_api_keys.py  test_auth_api.py  test_auth_dependencies.py  test_blame.py  test_c_parser.py  test_clone_detection.py  test_code_health.py  test_complexity.py  test_coupling.py  test_cpp_parser.py  test_cross_module.py  test_crypto.py  test_csharp_parser.py  test_dead_code.py  test_deep_languages.py  test_dependency_parser.py  test_diagrams_and_trends.py  test_diff_parser.py  test_doc_evaluator.py  test_docgen_api.py  test_edge_cases.py  test_embedder.py  test_entry_points.py  test_eval_api.py  test_eval_runner.py  test_exports.py  test_facts_extractor.py  test_fulltext_search.py  test_generator.py  test_github_oauth.py  test_go_parser.py  test_google_auth_api.py  test_google_oauth.py  test_graph_builder.py  (+46 more)
(+177 files in other folders)
