[project]
name = "eidos"
version = "0.1.0"
description = "Legacy Code Intelligence Tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "qdrant-client>=1.9",
    "openai>=1.30",
    "httpx>=0.27",
    "redis>=5.0",
    "gitpython>=3.1",
    "tree-sitter>=0.23",
    "tree-sitter-c-sharp>=0.23",
    "tree-sitter-java>=0.23",
    "tree-sitter-python>=0.23",
    "PyJWT>=2.8",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.10",
]
mysql = ["aiomysql>=0.2"]
oracle = ["oracledb>=2.0"]
mssql = ["aioodbc>=0.5"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
